# eur-lex

./: .gitignore  README.md  analyze_with_duckdb.ipynb  pyproject.toml
.github/workflows/: weekly_sync.yml
scripts/: check_completeness.py  upload_to_hf.py
src/eur_lex_miner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/eurovoc_miner/: cli.py  config.py  core.py  fetcher.py  parsers.py  processor.py
src/eurovoc_miner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eurovoc_miner/templates/: query.j2
