[project]
name = "eurovoc-miner"
version = "0.1.0"
description = "Fast extraction of European Commission documents and Eurovoc concepts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docx2txt>=0.9",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "pdfminer.six>=20260107",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "xmltodict>=1.0.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
]

[project.scripts]
eurovoc-miner = "eurovoc_miner.cli:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
